# mflix

./: .gitignore  README.md  pyproject.toml
mflix/: admin.py  apps.py  models.py  urls.py  views.py
mflix/templates/mflix/: base.html  comment_list.html  movie_detail.html  movie_list.html  theater_list.html  user_list.html
